<resources>
    <string name="app_name">eFace</string>
    <string name="menu_menu">Menu</string>
    <string name="settings">Settings</string>
    <string-array name="tab_array">
        <item>@string/tab_name_people</item>
        <item>@string/tab_name_recognition</item>
        <item>@string/tab_name_gallery</item>
    </string-array>
    <string name="app_rater_remind_later">Remind later</string>
    <string name="app_rater_name_dialog">Rate our app!</string>
    <string name="app_rater_message">If you like our app, rate it!</string>
    <string name="app_rater_rate_now">Rate now!</string>
    <string name="enter_name">Enter a name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tab_name_people">PEOPLE</string>
    <string name="tab_name_recognition">RECOGNITION</string>
    <string name="tab_name_gallery">GALLERY</string>
    <string name="query_hint">Searching...</string>
    <string name="first_pick_faces">First, tap some faces</string>
    <string name="set_period">Select period</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="make_photo_ava">Select as a main photo?</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_tutorial">Manual</string>
    <string name="tutorial_1_welcome">\tWelcome to eFace - convenient gallery with face recognition interface!</string>
    <string name="tutorial_2_1">\tButton Play in RECOGNITION tab starts face search.</string>
    <string name="tutorial_2_2">\tFace search requires some computing power. So, be careful with your battery`s charge.</string>
    <string name="tutorial_2_3">\tYou can always stop face search in RECOGNITION tab.</string>
    <string name="tutorial_3_1">\tAllocate tapped faces among your friends in RECOGNITION tab.</string>
    <string name="tutorial_3_2">\tYou may move faces between people in the same tab. You may use the bin to get rid of strangers and non faces.</string>
    <string name="tutorial_3_3">\tLong tap on a photo shows the whole photo, long tap on ADD - selects all photos.</string>
    <string name="tutorial_4_1">\tFrom now on all your friends` photos will be in one place.</string>
    <string name="tutorial_4_2">\tJust switch to PEOPLE tab and use the convenient interface to see photos with your friends.</string>
    <string name="tutorial_5_1">\tBuit-in gallery allows you not only to see all your photos but also to search among them.</string>
    <string name="tutorial_6_1">\teFace does not change or delete your photos! And it also does not upload them to the Internet!</string>
    <string name="tutorial_6_2">\tUse the feedback form to send us your comments and suggestions.</string>
    <string name="tutorial_6_3">\tThank you for being with us!</string>
    <string name="tutorial_6_4">To the app</string>
    <string name="tutorial_skip">skip</string>
    <string name="menu_about">About</string>
    <string name="about">About</string>
    <string name="send_mail_with">Send e-mail</string>
    <string name="click_photo">Tap a photo</string>
    <string name="add_man" formatted="false">Adding a person: selected faces - %d</string>
    <string name="without_name">No name</string>
    <string name="mail_to" translatable="false">feedback@flightlabs.ru</string>
    <string name="add_to_man" formatted="false">Adding. Selected faces - %d in %s</string>
    <string name="proceesing_photo_started">Face search started</string>
    <string name="photo_processing">Photo processing</string>
    <string name="waittt">Wait...</string>
    <string name="processing_started">Face search started</string>
    <string name="status_process" formatted="false">%d from %d processed</string>
    <string name="process_ended">Face search is completed</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate us!</string>
    <string name="no_man">There are no people. Switch to RECOGNITION tab and create people.</string>
    <string name="photo_on_phone">Number of photos</string>
    <string name="photo_processed">Processed photos</string>
    <string name="found_faces">Faces found</string>
    <string name="trash">Bin</string>
    <string name="change_name">Change name</string>
    <string name="set_ava">Select as the main photo</string>
    <string name="by_name">By name</string>
    <string name="by_quantity">By number</string>
    <string name="search_on_gallery">gallery search</string>
    <string name="no_faces">To start face search, please, tap the button Play</string>
    <string name="trash_message">Photo not deleted, only marked irrelevant</string>
    <string name="about_header">Our Project</string>
    <string name="about_main">eFace expands the limits of traditional photo galleries, and makes life easier and and more funny for those who like making photos with their smartphones. Equiped with our unique algorithm, eFace analyzes photos stored on your smartphone and automatically detects human faces. You can easily collect photos of your friends and relatives in one place, and access them whenever you like!</string>
    <string name="about_feedback">Your comments are welcome:</string>
    <string name="about_feedback_mail" translatable="false">feedback@flightlabs.ru</string>
    <string name="about_year" translatable="false">2016</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_by">By FlightLabs</string>
    <string name="about_main_2">Make technologies serve you with eFace!</string>
</resources>
