<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip">

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/tutorialTextStyle"
        android:text="@string/tutorial_6_1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="173"
        android:src="@drawable/tutorial_6_1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/tutorialTextStyle"
        android:text="@string/tutorial_6_2"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20" />
    <ImageView
        android:id="@+id/mailto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="168"
        android:src="@drawable/tutorial_6_2"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/tutorialTextStyle"
        android:text="@string/tutorial_6_3"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20" />
    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="7dip"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="#61075B"
        android:text="@string/tutorial_6_4" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>